# Simple3DEngine

./: .gitignore  CMakeLists.txt  README.md
res/: WoodCrateHighRes.ppm  WoodenCrateTexture.ppm
src/: main.cpp
src/Core/: Camera.h  Mesh.cpp  Mesh.h  Render.cpp  Render.h  ResourceManager.cpp  ResourceManager.h  ScreenTriangle.h  Texture.h  Time.cpp  Time.h  Transform.h  Triangle.h
src/Math/: Mat4x4.h  MathFwd.h  Vec2i.h  Vec3f.h  Vec3i.h  Vec4f.h
src/Platform/: Platform.cpp  Platform.h
src/Platform/Abstract/: Application.h  Input.h  Screen.h  SystemTime.h
src/Platform/Windows/: ApplicationWindows.h  InputGLFW.cpp  InputGLFW.h  ScreenOpenGL.cpp  ScreenOpenGL.h  TimeWindows.cpp  TimeWindows.h
